force-app/main/default/objects/QB_Auth__c/QB_Auth__c.object-meta.xml
<CustomObject>
    <label>QB Record</label>
    <nameField>
        <label>System Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>