force-app/main/default/objects/QB_Auth__c/fields/Access_Token_Expires_In__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_Expires_In__c</fullName>
    <label>Access Token Expires In</label>
    <type>DateTime</type>
</CustomField>