force-app/main/default/objects/QB_Auth__c/fields/App_Token__c.field-meta.xml
<CustomField>
    <fullName>App_Token__c</fullName>
    <label>App Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>