force-app/main/default/objects/QB_Auth__c/fields/Constants__c.field-meta.xml
<CustomField>
    <fullName>Constants__c</fullName>
    <label>Constants</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>