force-app/main/default/objects/QB_Auth__c/fields/OAuth_Key__c.field-meta.xml
<CustomField>
    <fullName>OAuth_Key__c</fullName>
    <label>OAuth Key</label>
    <type>TextArea</type>
</CustomField>