force-app/main/default/objects/QB_Auth__c/fields/oAuth_Secret__c.field-meta.xml
<CustomField>
    <fullName>oAuth_Secret__c</fullName>
    <label>oAuth Secret</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>