force-app/main/default/objects/QB_Auth__c/fields/Production__c.field-meta.xml
<CustomField>
    <fullName>Production__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Production?</label>
    <type>Checkbox</type>
</CustomField>