force-app/main/default/objects/QB_Auth__c/fields/Realm_ID__c.field-meta.xml
<CustomField>
    <fullName>Realm_ID__c</fullName>
    <label>Realm ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>