force-app/main/default/objects/QB_Auth__c/fields/Refresh_Token_Expires_In__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token_Expires_In__c</fullName>
    <label>Refresh Token Expires In</label>
    <type>DateTime</type>
</CustomField>