force-app/main/default/objects/QB_Auth__c/fields/Token_Time__c.field-meta.xml
<CustomField>
    <fullName>Token_Time__c</fullName>
    <label>Token Time</label>
    <type>DateTime</type>
</CustomField>