force-app/main/default/objects/QB_Auth__c/fields/Trolley_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Trolley_API_Key__c</fullName>
    <label>Trolley API Key</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>